--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-simple-keyboard": "^3.7.142",
     "react-swipeable-views": "^0.14.0"
   },
   "scripts": {
