--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@mui/x-charts": "^7.12.0",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
