--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.2.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "typescript": "^5.5.4",
     "web-vitals": "^4.2.2"
   }
 }
