--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-simple-keyboard": "^3.7.142",
-    "react-swipeable-views": "^0.14.0"
+    "swiper": "^11.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
